# vulkanrpg

./: README.md
android-port/: README.md  settings.gradle.kts
android-port/app/: build.gradle.kts  proguard-rules.pro
android-port/app/src/main/: AndroidManifest.xml
android-port/app/src/main/assets/scenes/: example_scene.json
android-port/app/src/main/assets/textures/: README.txt
android-port/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-port/app/src/main/cpp/engine/: Renderer.cpp  Renderer.h  VulkanContext.cpp  VulkanContext.h
android-port/app/src/main/cpp/shaders/: sprite.frag  sprite.vert
android-port/app/src/main/java/com/sovervo/vulkanrpg/: MainActivity.kt  NativeBridge.kt  VulkanSurfaceView.kt
android-port/app/src/main/java/com/sovervo/vulkanrpg/scene/: ExampleScene.kt  Scene.kt  SceneLoader.kt
android-port/app/src/main/res/values/: strings.xml
android-port/tools/shaders/: compile_shaders.ps1  compile_shaders.sh
reference-project/data/: System.json
